@@ -29,6 +29,7 @@ New user-visible features
 Bugs fixed
 ----------
 - Bug 2901 - Add CommandLine::Parse (const std::vector<std::string>> args)
+- Bug 2461 - CommandLine should handle non-option arguments
 
 Known issues
 ------------
